k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devpulse
  labels:
    app: devpulse
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: devpulse-proxy-tls
spec:
  selector:
    app: devpulse
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: proxy
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
