k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: devpulse
  labels:
    app: devpulse
spec:
  to:
    kind: Service
    name: devpulse
    weight: 100
  port:
    targetPort: proxy
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
